Create 5 modals for minigames

--- a/minigames.html
+++ b/minigames.html
@@ -7,6 +7,51 @@
     <title>Mini-Games</title>
 </head>
 <body>
-    
+    <main>
+        <button id="show-modal-btn">Show Random Game</button>
+        <!--Modals (hidden by Default)-->
+
+        <div class="modal" id="game1">
+            <div class="modal-content">
+                <h2>Game 1</h2>
+                <p>Instructions</p>
+                <button class="close-btn">Close</button>
+            </div>
+        </div>
+
+        <div class="modal" id="game2">
+            <div class="modal-content">
+                <h2>Game 2</h2>
+                <p>Instructions</p>
+                <button class="close-btn">Close</button>
+            </div>
+        </div>
+
+        <div class="modal" id="game3">
+            <div class="modal-content">
+                <h2>Game 3</h2>
+                <p>Instructions</p>
+                <button class="close-btn">Close</button>
+            </div>
+        </div>
+
+        <div class="modal" id="game4">
+            <div class="modal-content">
+                <h2>Game 4</h2>
+                <p>Instructions</p>
+                <button class="close-btn">Close</button>
+            </div>
+        </div>
+
+        <div class="modal" id="game5">
+            <div class="modal-content">
+                <h2>Game 5</h2>
+                <p>Instructions</p>
+                <button class="close-btn">Close</button>
+            </div>
+        </div>
+    </main>
+
+    <script src="assets/js/minigames.js"></script>
 </body>
 </html>
