--- a/minigames.html
+++ b/minigames.html
@@ -10,11 +10,29 @@
     <main>
         <button id="show-modal-btn">Show Random Game</button>
         <!--Modals (hidden by Default)-->
-
+        <!--Hangman Game From https://www.codingnepalweb.com/build-hangman-game-html-javascript/-->
         <div class="modal" id="game1">
             <div class="modal-content">
-                <h2>Game 1</h2>
-                <p>Instructions</p>
+                <div class="game-modal">
+                    <div class="content">
+                        <img src="#" alt="gif">
+                        <h4>Game Over!</h4>
+                        <p>The correct word was: <b>rainbow</b></p>
+                        <button class="play-again">Play Again</button>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="hangman-box">
+                        <img src="#" draggable="false" alt="hangman-img">
+                        <h1>Hangman Game</h1>
+                    </div>
+                    <div class="game-box">
+                        <ul class="word-display"></ul>
+                        <h4 class="hint-text">Hint: <b></b></h4>
+                        <h4 class="guesses-text">Incorrect guesses: <b></b></h4>
+                        <div class="keyboard"></div>
+                    </div>
+                </div>
                 <button class="close-btn">Close</button>
             </div>
         </div>
