Update classes for CSS

--- a/minigames.html
+++ b/minigames.html
@@ -11,14 +11,14 @@
         <button id="show-modal-btn">Show Random Game</button>
         <!--Modals (hidden by Default)-->
         <!--Hangman Game From https://www.codingnepalweb.com/build-hangman-game-html-javascript/-->
-        <div class="modal" id="game1">
-            <div class="modal-content">
-                <div class="game-modal">
-                    <div class="content">
+        <div class="minigame" id="game1">
+            <div class="minigame-content">
+                <div class="hangman-modal">
+                    <div class="hangman-content">
                         <img src="#" alt="gif">
                         <h4>Game Over!</h4>
                         <p>The correct word was: <b>rainbow</b></p>
-                        <button class="play-again">Play Again</button>
+                        <button class="hangman-play-again">Play Again</button>
                     </div>
                 </div>
                 <div class="container">
