Update JS to new classes and ids

--- a/minigames.html
+++ b/minigames.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <button id="show-modal-btn">Show Random Game</button>
+        <button id="show-minigame-btn">Show Random Game</button>
         <!--Modals (hidden by Default)-->
         <!--Hangman Game From https://www.codingnepalweb.com/build-hangman-game-html-javascript/-->
         <div class="minigame" id="game1">
@@ -37,32 +37,32 @@
             </div>
         </div>
 
-        <div class="modal" id="game2">
-            <div class="modal-content">
+        <div class="minigame" id="game2">
+            <div class="minigame-content">
                 <h2>Game 2</h2>
                 <p>Instructions</p>
                 <button class="close-btn">Close</button>
             </div>
         </div>
 
-        <div class="modal" id="game3">
-            <div class="modal-content">
+        <div class="minigame" id="game3">
+            <div class="minigame-content">
                 <h2>Game 3</h2>
                 <p>Instructions</p>
                 <button class="close-btn">Close</button>
             </div>
         </div>
 
-        <div class="modal" id="game4">
-            <div class="modal-content">
+        <div class="minigame" id="game4">
+            <div class="minigame-content">
                 <h2>Game 4</h2>
                 <p>Instructions</p>
                 <button class="close-btn">Close</button>
             </div>
         </div>
 
-        <div class="modal" id="game5">
-            <div class="modal-content">
+        <div class="minigame" id="game5">
+            <div class="minigame-content">
                 <h2>Game 5</h2>
                 <p>Instructions</p>
                 <button class="close-btn">Close</button>
