Create words array and get retrieve html elements

--- a/minigames.html
+++ b/minigames.html
@@ -15,7 +15,6 @@
             <div class="minigame-content">
                 <div class="hangman-modal">
                     <div class="hangman-content">
-                        <img src="#" alt="gif">
                         <h4>Game Over!</h4>
                         <p>The correct word was: <b>rainbow</b></p>
                         <button class="hangman-play-again">Play Again</button>
@@ -23,7 +22,7 @@
                 </div>
                 <div class="hangman-container">
                     <div class="hangman-box">
-                        <img src="#" draggable="false" alt="hangman-img">
+                        <img src="assets/minigame-images/hangman-images/hangman-0.webp" draggable="false" alt="hangman-img">
                         <h1>Hangman Game</h1>
                     </div>
                     <div class="hangman-game-box">
