--- a/minigames.html
+++ b/minigames.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/minigames.css">
     <!-- FontAweome CDN Link for Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <title>Mini-Games</title>
 </head>
+
 <body>
     <main>
         <button id="show-minigame-btn">Show Random Game</button>
@@ -24,7 +26,8 @@
                 </div>
                 <div class="hangman-container">
                     <div class="hangman-box">
-                        <img src="assets/minigame-images/hangman-images/hangman-0.webp" draggable="false" alt="hangman-img">
+                        <img src="assets/minigame-images/hangman-images/hangman-0.webp" draggable="false"
+                            alt="hangman-img">
                         <h1>Hangman Game</h1>
                     </div>
                     <div class="hangman-game-box">
@@ -40,64 +43,62 @@
 
         <div class="minigame" id="game2">
             <div class="minigame-content">
-                    <!-- start Quiz button -->
-    <div class="start_btn"><button>Start Quiz</button></div>
-    <!-- Info Box -->
-    <div class="info_box">
-        <div class="info-title"><span>Some Rules of this Quiz</span></div>
-        <div class="info-list">
-            <div class="info">1. You will have only <span>15 seconds</span> per each question.</div>
-            <div class="info">2. Once you select your answer, it can't be undone.</div>
-            <div class="info">3. You can't select any option once time goes off.</div>
-            <div class="info">4. You can't exit from the Quiz while you're playing.</div>
-            <div class="info">5. You'll get points on the basis of your correct answers.</div>
-        </div>
-        <div class="buttons">
-            <button class="quit">Exit Quiz</button>
-            <button class="restart">Continue</button>
-        </div>
-    </div>
-    <!-- Quiz Box -->
-    <div class="quiz_box">
-        <header>
-            <div class="title">Awesome Quiz Application</div>
-            <div class="timer">
-                <div class="time_left_txt">Time Left</div>
-                <div class="timer_sec">15</div>
-            </div>
-            <div class="time_line"></div>
-        </header>
-        <section>
-            <div class="que_text">
-                <!-- Here I've inserted question from JavaScript -->
-            </div>
-            <div class="option_list">
-                <!-- Here I've inserted options from JavaScript -->
-            </div>
-        </section>
-        <!-- footer of Quiz Box -->
-        <footer>
-            <div class="total_que">
-                <!-- Here I've inserted Question Count Number from JavaScript -->
-            </div>
-            <button class="next_btn">Next Que</button>
-        </footer>
-    </div>
-    <!-- Result Box -->
-    <div class="result_box">
-        <div class="icon">
-            <i class="fas fa-crown"></i>
-        </div>
-        <div class="complete_text">You've completed the Quiz!</div>
-        <div class="score_text">
-            <!--Score result from JavaScript -->
-        </div>
-        <div class="buttons">
-            <button class="restart">Replay Quiz</button>
-            <button class="quit">Quit Quiz</button>
-        </div>
-    </div>
-    
+                <!-- start Quiz button -->
+                <div class="start_btn"><button>Start Quiz</button></div>
+                <!-- Info Box -->
+                <div class="quiz-info_box">
+                    <div class="quiz-info-title"><span>Some Rules of this Quiz</span></div>
+                    <div class="quiz-info-list">
+                        <div class="quiz-info">1. You will have only <span>15 seconds</span> per each question.</div>
+                        <div class="quiz-info">2. Once you select your answer, it can't be undone.</div>
+                        <div class="quiz-info">3. You can't select any option once time goes off.</div>
+                        <div class="quiz-info">4. You can't exit from the Quiz while you're playing.</div>
+                        <div class="quiz-info">5. You'll get points on the basis of your correct answers.</div>
+                    </div>
+                    <div class="quiz-buttons">
+                        <button class="quiz-quit">Exit Quiz</button>
+                        <button class="quiz-restart">Continue</button>
+                    </div>
+                </div>
+                <!-- Quiz Box -->
+                <div class="quiz-box">
+                    <header>
+                        <div class="quiz-title">Quiz Application</div>
+                        <div class="quiz-timer">
+                            <div class="quiz-time-left-txt">Time Left</div>
+                            <div class="quiz-timer-sec">15</div>
+                        </div>
+                        <div class="quiz-time-line"></div>
+                    </header>
+                    <section>
+                        <div class="quiz-question-text">
+                        </div>
+                        <div class="quiz-option-list">
+                        </div>
+                    </section>
+                    <!-- footer of Quiz Box -->
+                    <footer>
+                        <div class="total-question">
+                            <!-- Here I've inserted Question Count Number from JavaScript -->
+                        </div>
+                        <button class="quiz-next-btn">Next Question</button>
+                    </footer>
+                </div>
+                <!-- Result Box -->
+                <div class="quiz-result-box">
+                    <div class="icon">
+                        <i class="fas fa-crown"></i>
+                    </div>
+                    <div class="quiz-complete_text">You've completed the Quiz!</div>
+                    <div class="quiz-score_text">
+                        <!--Score result from JavaScript -->
+                    </div>
+                    <div class="quiz-buttons">
+                        <button class="quiz-restart">Replay Quiz</button>
+                        <button class="quiz-quit">Quit Quiz</button>
+                    </div>
+                </div>
+
                 <button class="close-btn">Close</button>
             </div>
         </div>
@@ -131,4 +132,5 @@
     <script src="js/questions.js"></script>
     <script src="assets/js/minigames.js"></script>
 </body>
+
 </html>
