Apply CSS styles to quiz

--- a/minigames.html
+++ b/minigames.html
@@ -62,14 +62,14 @@
                 </div>
                 <!-- Quiz Box -->
                 <div class="quiz-box">
-                    <header>
+                    <section>
                         <div class="quiz-title">Quiz Application</div>
                         <div class="quiz-timer">
                             <div class="quiz-time-left-txt">Time Left</div>
                             <div class="quiz-timer-sec">15</div>
                         </div>
                         <div class="quiz-time-line"></div>
-                    </header>
+                    </section>
                     <section>
                         <div class="quiz-question-text">
                         </div>
@@ -77,12 +77,12 @@
                         </div>
                     </section>
                     <!-- footer of Quiz Box -->
-                    <footer>
+                    <section id="quiz-footer">
                         <div class="total-question">
                             <!-- Here I've inserted Question Count Number from JavaScript -->
                         </div>
                         <button class="quiz-next-btn">Next Question</button>
-                    </footer>
+                    </section>
                 </div>
                 <!-- Result Box -->
                 <div class="quiz-result-box">
