--- a/test-folder/test.html
+++ b/test-folder/test.html
@@ -9,15 +9,33 @@
 </head>
 
 <body>
-    <div class="guess-wrapper">
-        <section id="guess-section">Guess a number from 1 to 100</section>
-        <p class="guess"></p>
-        <div class="guess-input-field">
-            <input class="guess-input" type="number" />
-            <button class="guess-btn">Check</button>
+    <section class="rps-container">
+        <div class="rps-result_field">
+            <div class="rps-result_images">
+                <span class="rps-user_result">
+                    <img src="images/rock.png" alt="" />
+                </span>
+                <span class="rps-cpu_result">
+                    <img src="images/rock.png" alt="" />
+                </span>
+            </div>
+            <div class="rps-result">Play</div>
         </div>
-        <p>You have <span class="guess-chances">5</span> chances</p>
-    </div>
+        <div class="rps-option_images">
+            <span class="rps-option_image">
+                <img src="images/rock.png" alt="" />
+                <p>Rock</p>
+            </span>
+            <span class="rps-option_image">
+                <img src="images/paper.png" alt="" />
+                <p>Paper</p>
+            </span>
+            <span class="rps-option_image">
+                <img src="images/scissors.png" alt="" />
+                <p>Scissors</p>
+            </span>
+        </div>
+    </section>
 
     <script src="test.js"></script>
 </body>
