--- a/minigames.html
+++ b/minigames.html
@@ -31,16 +31,33 @@
         </div>
 
         <div class="minigame" id="game2">
-            <div class="minigame-content">
-                <button class="matching-cards-btn">Start</button>
-                <div class="matching-cards-stats">
-                    <div class="matching-cards-moves">0 moves</div>
-                    <div class="matching-cards-timer">time: 0 sec</div>
+            <section class="rps-container">
+                <div class="rps-result_field">
+                    <div class="rps-result_images">
+                        <span class="rps-user_result">
+                            <img src="images/rock.png" alt="" />
+                        </span>
+                        <span class="rps-cpu_result">
+                            <img src="images/rock.png" alt="" />
+                        </span>
+                    </div>
+                    <div class="rps-result">Play</div>
                 </div>
-            </div>
-            <div class="matching-cards-board-container">
-                <div class="matching-cards-board" data-dimension="4"></div>
-                <div class="matching-cards-win">You won!</div>
+                <div class="rps-option_images">
+                    <span class="rps-option_image">
+                        <img src="images/rock.png" alt="" />
+                        <p>Rock</p>
+                    </span>
+                    <span class="rps-option_image">
+                        <img src="images/paper.png" alt="" />
+                        <p>Paper</p>
+                    </span>
+                    <span class="rps-option_image">
+                        <img src="images/scissors.png" alt="" />
+                        <p>Scissors</p>
+                    </span>
+                </div>
+            </section>
 
                 <button class="close-btn">Close</button>
             </div>
