Testing Carousel for area explore

--- a/index.html
+++ b/index.html
@@ -25,6 +25,33 @@
         <section class="container section" id="main-map">
             <img src="assets/images/main-map.png" alt="Map" class="colour-cover">
         </section>
+
+        <section aria-label="exploring area">
+            <div class="carousel">
+                <button class="carousel-button left">&#8656;</button>
+                <button class="carousel-button right">&#8658;</button>
+                <button class="carousel-button up">&#8657;</button>
+                <button class="carousel-button down">&#8659;</button>
+                <div class="carousel-grid">
+                    <div class="row">
+                        <div class="col"><img src="" alt="Image 1" class="carousel-image"></div>
+                        <div class="col"><img src="" alt="Image 2" class="carousel-image"></div>
+                        <div class="col"><img src="" alt="Image 3" class="carousel-image"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col"><img src="" alt="Image 4" class="carousel-image"></div>
+                        <div class="col"><img src="" alt="Image 5" class="carousel-image"></div>
+                        <div class="col"><img src="" alt="Image 6" class="carousel-image"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col"><img src="" alt="Image 7" class="carousel-image"></div>
+                        <div class="col"><img src="" alt="Image 8" class="carousel-image"></div>
+                        <div class="col"><img src="" alt="Image 9" class="carousel-image"></div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-primary" id="explore-button">Explore</button>
+        </section> 
     </main>
     
     <!-- Bootstrap JS -->
@@ -32,6 +59,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/explore.js"></script>
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/128240b0e7.js" crossorigin="anonymous"></script>
     
