--- a/explore.html
+++ b/explore.html
@@ -26,30 +26,18 @@
     <main>
 
         <section aria-label="exploring area">
-            <div class="carousel">
-                <button class="carousel-button left">&#8656;</button>
-                <button class="carousel-button right">&#8658;</button>
-                <button class="carousel-button up">&#8657;</button>
-                <button class="carousel-button down">&#8659;</button>
-                <div class="carousel-grid">
-                    <div class="row">
-                        <div class="col"><img src="" alt="Image 1" class="carousel-image"></div>
-                        <div class="col"><img src="" alt="Image 2" class="carousel-image"></div>
-                        <div class="col"><img src="" alt="Image 3" class="carousel-image"></div>
-                    </div>
-                    <div class="row">
-                        <div class="col"><img src="" alt="Image 4" class="carousel-image"></div>
-                        <div class="col"><img src="" alt="Image 5" class="carousel-image"></div>
-                        <div class="col"><img src="" alt="Image 6" class="carousel-image"></div>
-                    </div>
-                    <div class="row">
-                        <div class="col"><img src="" alt="Image 7" class="carousel-image"></div>
-                        <div class="col"><img src="" alt="Image 8" class="carousel-image"></div>
-                        <div class="col"><img src="" alt="Image 9" class="carousel-image"></div>
-                    </div>
+            <div class="container d-flex justify-content-center">
+                <div class="carousel col-12 col-md-6 col-lg-4">
+                    <img src="" alt="Carousel Image" class="carousel-image active">
+                    <button class="carousel-button" id="carousel-left">&#8656;</button>
+                    <button class="carousel-button" id="carousel-right">&#8658;</button>
+                    <button class="carousel-button" id="carousel-up">&#8657;</button>
+                    <button class="carousel-button" id="carousel-down">&#8659;</button>
                 </div>
             </div>
-            <button class="btn btn-primary" id="explore-button">Explore</button>
+            <div class="d-flex justify-content-center mt-3">
+                <button class="btn btn-primary" id="explore-button">Explore</button>
+            </div>
         </section> 
 
 
