--- a/explore.html
+++ b/explore.html
@@ -25,9 +25,9 @@
     </nav>
     <main>
 
-        <section aria-label="exploring area">
+        <section class="mt-5" aria-label="exploring area">
             <div class="container d-flex justify-content-center">
-                <div class="carousel col-12 col-md-6 col-lg-4">
+                <div class="carousel col-12 col-md-6 col-lg-5">
                     <img src="" alt="Carousel Image" class="carousel-image active">
                     <button class="carousel-button" id="carousel-left">&#8656;</button>
                     <button class="carousel-button" id="carousel-right">&#8658;</button>
@@ -37,6 +37,21 @@
             </div>
             <div class="d-flex justify-content-center mt-3">
                 <button class="btn btn-primary" id="explore-button">Explore</button>
+            </div>
+            <div class="d-flex justify-content-center mt-3">
+                <div class="mini-map">
+                    <div class="mini-map-grid">
+                        <div class="mini-map-cell" id="cell-0-0"></div>
+                        <div class="mini-map-cell" id="cell-0-1"></div>
+                        <div class="mini-map-cell" id="cell-0-2"></div>
+                        <div class="mini-map-cell" id="cell-1-0"></div>
+                        <div class="mini-map-cell" id="cell-1-1"></div>
+                        <div class="mini-map-cell" id="cell-1-2"></div>
+                        <div class="mini-map-cell" id="cell-2-0"></div>
+                        <div class="mini-map-cell" id="cell-2-1"></div>
+                        <div class="mini-map-cell" id="cell-2-2"></div>
+                    </div>
+                </div>
             </div>
         </section> 
 
