--- a/minigames.html
+++ b/minigames.html
@@ -12,7 +12,7 @@
 
 <body>
     <main>
-        <button id="show-minigame-btn">Show Random Game</button>
+        <button class="show-minigame-btn">Show Random Game</button>
         <!--Modals (hidden by Default)-->
         <!--Hangman Game From https://www.codingnepalweb.com/build-hangman-game-html-javascript/-->
         <div class="minigame" id="game1">
