--- a/combat.html
+++ b/combat.html
@@ -8,27 +8,36 @@
 </head>
 <body>
     <div class="game-container">
-        <div class="status">
-            <h1>Turn-Based RPG Combat</h1>
-            <p id="message">Battle begins! It's your turn!</p>
-        </div>
-        <div class="health-bars">
-            <div class="health-bar">
-                <h2>Player</h2>
-                <div class="health" id="player-health"></div>
-                <p id="player-hp">HP: 100</p>
+        <button id="start-combat-btn">Start Combat</button>
+    </div>
+
+    <!-- Combat Modal -->
+    <div class="modal" id="combat-modal">
+        <div class="modal-content">
+            <span class="close-btn" id="close-modal">&times;</span>
+            <div class="status">
+                <h1>Turn-Based RPG Combat</h1>
+                <p id="message">Battle begins! It's your turn!</p>
             </div>
-            <div class="health-bar">
-                <h2>Enemy</h2>
-                <div class="health" id="enemy-health"></div>
-                <p id="enemy-hp">HP: 100</p>
+            <div class="health-bars">
+                <div class="health-bar">
+                    <h2>Player</h2>
+                    <div class="health" id="player-health"></div>
+                    <p id="player-hp">HP: 100</p>
+                </div>
+                <div class="health-bar">
+                    <h2>Enemy</h2>
+                    <div class="health" id="enemy-health"></div>
+                    <p id="enemy-hp">HP: 100</p>
+                </div>
             </div>
-        </div>
-        <div class="actions">
-            <button id="attack-btn">Attack</button>
-            <button id="heal-btn">Heal</button>
+            <div class="actions">
+                <button id="attack-btn">Attack</button>
+                <button id="heal-btn">Heal</button>
+            </div>
         </div>
     </div>
+
     <script src="assets/js/combat.js"></script>
 </body>
 </html>
