--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         </div>
     </nav>
     <main>
+        <div>
+            <div class="container section" id="map">
+                <div class="row">
+                    <img src="assets/images/main-map.png" alt="main-map" class="img-fluid">
+                </div>
+            </div>
+        </div>
         <div class="container controls-area justify-content-center">
             <button data-type="boat" class="btn btn--big" type="submit" id="boat">
                 <i class="fa-solid fa-sailboat fa-bounce" style="color: #497a7e;"></i>
