--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <div class="container controls-area justify-content-center">
+        <div class="container controls-area justify-content-center main-map" id="icons">
             <button data-type="boat" class="btn btn--big" type="submit" id="boat">
                 <i class="fa-solid fa-sailboat fa-bounce" style="color: #497a7e;"></i>
             </button>
