--- a/boatMap.html
+++ b/boatMap.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/minigames.css">
     <link rel="stylesheet" href="assets/css/combat.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -63,6 +64,53 @@
                 </div>
             </div>
         </div>
+        <!-- Minigame Modals-->
+        <div class="minigame" id="game1">
+            <div class="minigame-content">
+                <div class="guess-wrapper">
+                    <section id="guess-section">Guess a number from 1 to 100</section>
+                    <p class="guess"></p>
+                    <div class="guess-input-field">
+                        <input class="guess-input" type="number" />
+                        <button class="guess-btn">Check</button>
+                    </div>
+                    <p>You have <span class="guess-chances">10</span> chances</p>
+                </div>
+                <button class="close-btn">Close</button>
+            </div>
+        </div>
+
+        <div class="minigame" id="game2">
+            <section class="rps-container">
+                <div class="rps-result_field">
+                    <div class="rps-result_images">
+                        <span class="rps-user_result">
+                            <img src="images/rock.png" alt="" />
+                        </span>
+                        <span class="rps-cpu_result">
+                            <img src="images/rock.png" alt="" />
+                        </span>
+                    </div>
+                    <div class="rps-result">Play</div>
+                </div>
+                <div class="rps-option_images">
+                    <span class="rps-option_image">
+                        <img src="images/rock.png" alt="" />
+                        <p>Rock</p>
+                    </span>
+                    <span class="rps-option_image">
+                        <img src="images/paper.png" alt="" />
+                        <p>Paper</p>
+                    </span>
+                    <span class="rps-option_image">
+                        <img src="images/scissors.png" alt="" />
+                        <p>Scissors</p>
+                    </span>
+                </div>
+            </section>
+
+                <button class="close-btn">Close</button>
+            </div>
     </main>
     <footer class="mt-auto">
         <div class="container d-flex justify-content-center">
@@ -75,6 +123,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
+    <script src="assets/js/minigames.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/combat.js"></script>
     <!-- font awesome -->
