Test Battle style

--- a/explore.html
+++ b/explore.html
@@ -54,9 +54,6 @@
                 </div>
             </div>
         </section> 
-
-
-
     </main>
     <footer class="mt-auto">
         <div class="container d-flex justify-content-center">
@@ -73,6 +70,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
     <script src="assets/js/script.js"></script>
+    <!--field explore minimap and battle js-->
     <script src="assets/js/explore.js"></script>
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/128240b0e7.js" crossorigin="anonymous"></script>
