--- a/boatMap.html
+++ b/boatMap.html
@@ -32,8 +32,8 @@
                 </div>
             </div>
         </div>
-        <div class="container controls-area justify-content-center main-map combat-game-container" id="icons">
-            <button data-type="quest" class="btn btn--big" data-bs-toggle="modal" type="submit" id="combat-start-btn">
+        <div class="container controls-area justify-content-center combat-game-container" id="icons">
+            <button data-type="quest" class="btn btn--big" data-bs-toggle="modal" type="submit" id="quest">
                 <i class="fa-regular fa-square fa-fade" style="color: #f3e9a9;"></i>
             </button>
 
