--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     <main>
         <div>
-            <div class="container section inner d-flex justify-content-center">
+            <div class="container section inner background">
                 <div class="row">
                     <img src="assets/images/main-map.png" alt="main-map" class="img-fluid">
                 </div>
