--- a/battle.html
+++ b/battle.html
@@ -29,9 +29,13 @@ for pair programming ask Jeff Chen 29/11/2024-->
     <main class="d-flex flex-column align-items-center">
         <!-- Battle -->
         <!--border for test only-->
-        <section id="battle" class="mt-5 border border-dark" aria-label="battle">
+        <section id="battle" class="mt-5" aria-label="battle">
             <div class="container">
                 <div class="position-relative">
+                    <!-- Dialogue bubble for battle messages -->
+                    <div id="battleMsg" class="position-absolute w-100">
+                        <!-- Message content will be inserted here -->
+                    </div>
                     <!-- Enemy HP bar -->
                     <div class="position-absolute w-100" style="top: 0; transform: translateY(-100%);">
                         <div class="d-flex align-items-center">
@@ -50,9 +54,9 @@ for pair programming ask Jeff Chen 29/11/2024-->
                             <span class="me-2">HP:</span>
                             <div class="progress w-100">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 100%;" aria-valuenow="100"
-                                    aria-valuemin="0" aria-valuemax="100"></div>
+                                    aria-valuemin="0" aria-valuemax="100" id="heroHpBar"></div>
                                 <div class="progress-bar bg-primary" role="progressbar" style="width: 0%;" aria-valuenow="0"
-                                    aria-valuemin="0" aria-valuemax="100"></div>
+                                    aria-valuemin="0" aria-valuemax="100" id="heroReducedHpBar"></div>
                             </div>
                         </div>
                         <div class="d-flex align-items-center mt-2">
