--- a/battle.html
+++ b/battle.html
@@ -73,7 +73,7 @@ for pair programming ask Jeff Chen 29/11/2024-->
                     <button id="defButton"
                         class="btn btn-secondary position-absolute top-50 start-0 translate-middle-y">DEF</button>
                     <button id="healButton"
-                        class="btn btn-success position-absolute top-50 end-0 translate-middle-y">Heal</button>
+                        class="btn btn-success position-absolute top-50 end-0 translate-middle-y">Heal<br><span>x</span></span><span id="potionCount">20</span></button>
                     <button id="fleeButton"
                         class="btn btn-warning position-absolute bottom-0 start-50 translate-middle-x">Flee</button>
                     <img src="assets/images/battle/knight-s.png" alt="Hero" class="position-absolute bottom-0 start-0">
