Add bosscastle map materials

--- a/explore.html
+++ b/explore.html
@@ -20,7 +20,7 @@
     <!-- bootstrap navbar -->
     <nav class="navbar bg-body-tertiary navbar-custom fixed-top">
         <div class="container-fluid d-flex justify-content-center">
-            <span class="navbar-brand mb-0 h1">title</span>
+            <span class="navbar-brand mb-0 h1">Explore</span>
         </div>
     </nav>
     <main>
@@ -37,6 +37,10 @@
             </div>
             <div class="d-flex justify-content-center mt-3">
                 <button class="btn btn-primary" id="explore-button">Explore</button>
+                <select id="location-select" class="form-select ms-2" style="width: auto;">
+                    <option value="boasscastle">Boss Castle</option>
+                    <option value="mountain">Moutain</option>
+                </select>
             </div>
             <div class="d-flex justify-content-center mt-3">
                 <div class="mini-map">
