Add implemnet facing final boss and hero state display in explore map

--- a/battle.html
+++ b/battle.html
@@ -103,6 +103,7 @@ for pair programming ask Jeff Chen 29/11/2024-->
     <script src="assets/js/script.js"></script>
     <!--field explore minimap and battle js-->
     <script src="assets/js/battle.js"></script>
+    <script src="assets/js/explore.js"></script>
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/128240b0e7.js" crossorigin="anonymous"></script>
 
